Refactoring add markdown

--- a/notebooks/A-B Testing Machine Learning.ipynb
+++ b/notebooks/A-B Testing Machine Learning.ipynb
@@ -54,6 +54,20 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# A/B Testing using Machine learning"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Retrieve Data"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "source": [
@@ -278,7 +292,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Select only users with a response\r\n",
+    "## Data Processing"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Select only users with a response\r\n",
     "\r\n",
     "Only the users are useful for our anlysis of the project which is whether they grow more aware of the brand"
    ],
@@ -297,7 +318,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Remove auction Id"
+    " Remove auction Id"
    ],
    "metadata": {}
   },
@@ -584,12 +605,33 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Decision Tree Classifier model "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Create Decision Tree Classifier model "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "source": [
     "decision_model=CreateModel(X_train=X_Cross,X_test=X_test,y_train=y_Cross,y_test=y_test,data_version=rev,name=\"DecisionTreeClassifier\",model=DecisionTreeClassifier)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We have our baseline decision tree classifier model below. It has a log loss of 16.57"
+   ],
    "metadata": {}
   },
   {
@@ -606,6 +648,13 @@
       "Log loss of model is  16.57879177938149\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The feature importances of the different featuers. We can see that experiemnt has a very low importance near the bottom of the features. Menaing it has very little effect on the awareness of the brand"
    ],
    "metadata": {}
   },
@@ -689,6 +738,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "K fold validation of our model. The details can be seen in the mlflow dashboard. "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "source": [
@@ -705,6 +761,13 @@
      "metadata": {},
      "execution_count": 13
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Our hyperparameter tuned model. It has a log loss of 16.302 which is lower than our baseline"
    ],
    "metadata": {}
   },
@@ -734,10 +797,16 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The feature importances in our more accurate model. We can see that experiment has gone down to an importance of 0. Which means that it has no effect on awareness of the brand"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "source": [
-    "\r\n",
     "feature_importances = pd.DataFrame((hyperparameter_tuned_decision_model.feature_importances_).transpose() , index=X.columns.tolist(), columns=['importance'])\r\n",
     "feature_importances.sort_values('importance', ascending=False)"
    ],
@@ -813,12 +882,26 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Xgboost Model"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "source": [
     "xgboost_model=CreateModelXGBoost(X_train=X_Cross,X_test=X_test,y_train=y_Cross,y_test=y_test,data_version=rev,name=\"XGBoost\",model=XGBClassifier)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We have our xgboost model below. It has a log loss of 16.0.2 which is better than our decision tree model. "
+   ],
    "metadata": {}
   },
   {
@@ -836,6 +919,13 @@
       "Log loss of model is  16.026132976386272\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The feature importances of the different features in our xgboost baseline model. We can see that the experiment has the biggest importance "
    ],
    "metadata": {}
   },
@@ -918,6 +1008,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "K fold validation of our model. The details can be seen in the mlflow dashboard. "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "source": [
@@ -952,6 +1049,13 @@
      "metadata": {},
      "execution_count": 18
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Our hyperparameter tuned xgboost model has a log loss of 15.473 which improves on our baseline model"
    ],
    "metadata": {}
   },
@@ -1008,8 +1112,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Our tuned model puts the experimnet lower than it was before as less important than the hour. The value of its imporance is also low meaning that it does not drive awareness. "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "source": [
     "feature_importances = pd.DataFrame((hyperparameter_tuned_xgboost_model.feature_importances_).transpose() , index=X.columns.tolist(), columns=['importance'])\r\n",
     "feature_importances.sort_values('importance', ascending=False)"
@@ -1080,8 +1191,22 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 30
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Logistic Regression Model"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Our Logistic regression model"
    ],
    "metadata": {}
   },
@@ -1104,6 +1229,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The baseline logistic regression model has a baseline log loss of 15.473. Which makes it better than even our tuned xgboost"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "source": [
@@ -1117,6 +1249,13 @@
       "Log loss of model is  15.473410205596634\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The feature importnace of our features show that our experiment is near the bottom in terms of driving the awareness. "
    ],
    "metadata": {}
   },
@@ -1199,6 +1338,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "K fold validation of our model. The details can be seen in the mlflow dashboard. "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "source": [
@@ -1215,6 +1361,13 @@
      "metadata": {},
      "execution_count": 27
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The hyper parameter tuned logisit regression model has a log loss of 15.197 which improves on the baseline"
    ],
    "metadata": {}
   },
@@ -1240,6 +1393,13 @@
       "Log loss of model is  15.197061613760699\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The feature imporance of our experiment still remains low meaning that the ad has not improved awareness"
    ],
    "metadata": {}
   },
@@ -1322,6 +1482,14 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Conclusions\r\n",
+    "We can see from our various models that the experiment does not drive awareness. We must conclude that the exposure to the dynamic Ad by SmartAd has not improved awareness. "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
@@ -1364,15 +1532,14 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "l\r\n",
-    "ogged_model = 'runs:/514249d44d01476db05cd9819ad12228/best_estimator'\r\n",
+    "# logged_model = 'runs:/514249d44d01476db05cd9819ad12228/best_estimator'\r\n",
     "\r\n",
-    "# Load model as a PyFuncModel.\r\n",
-    "loaded_model = mlflow.sklearn.load_model(logged_model)\r\n",
-    "\r\n",
+    "# # Load model as a PyFuncModel.\r\n",
+    "# loaded_model = mlflow.sklearn.load_model(logged_model)\r\n",
     "\r\n",
     "\r\n",
-    "feature_importances = pd.DataFrame((loaded_model.feature_importances_).transpose() , index=X_train.columns.tolist(), columns=['importance'])\r\n",
+    "\r\n",
+    "# feature_importances = pd.DataFrame((loaded_model.feature_importances_).transpose() , index=X_train.columns.tolist(), columns=['importance'])\r\n",
     "# feature_importances.sort_values('importance', ascending=False)"
    ],
    "outputs": [],
